# KCyberoam

./: .gitignore  CMakeLists.txt  README.md  generalsettings.cpp  generalsettings.h  generalsettings.ui  kcyberoam.kcfg  kcyberoam.kcfgc  kcyberoamui.rc  main.cpp  mainwindow.cpp  mainwindow.h
