project( kcyberoam ) 
find_package( KDE4 REQUIRED )
find_package(Qt4 REQUIRED)
include_directories( ${KDE4_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR} )
set( kcyberoam_SRCS main.cpp mainwindow.cpp generalsettings.cpp)
kde4_add_ui_files( kcyberoam_SRCS mainwindow.ui generalsettings.ui)
qt4_add_resources( kcyberoam_SRCS res.qrc )
kde4_add_kcfg_files( kcyberoam_SRCS kcyberoam.kcfgc )
kde4_add_executable( kcyberoam ${kcyberoam_SRCS} )
target_link_libraries( kcyberoam ${KDE4_KDEUI_LIBS} )
install( TARGETS kcyberoam DESTINATION ${BIN_INSTALL_DIR} )
install( FILES kcyberoamui.rc DESTINATION ${DATA_INSTALL_DIR}/kcyberoam )
install( FILES kcyberoam.kcfg DESTINATION ${KCFG_INSTALL_DIR})
